# Omniscient

./: .gitignore  Cargo.toml  README.md
crates/omniscient-cli/: Cargo.toml
crates/omniscient-cli/src/: main.rs
crates/omniscient-core/: Cargo.toml
crates/omniscient-core/src/: agent.rs  config.rs  error.rs  lib.rs  memory.rs  orchestrator.rs  react_loop.rs  taint.rs  task.rs  todo.rs  tools.rs  types.rs
crates/omniscient-gui/: index.html  package-lock.json  package.json
crates/omniscient-gui/src/: main.ts  styles.css
crates/omniscient-gui/src-tauri/: Cargo.toml  tauri.conf.json
crates/omniscient-gui/src-tauri/icons/: icon.icns
crates/omniscient-gui/src-tauri/src/: main.rs
crates/omniscient-knowledge/: Cargo.toml
crates/omniscient-knowledge/src/: graph.rs  index.rs  lib.rs  memory_store.rs  ontology_graph.rs  traits.rs
crates/omniscient-llm/: Cargo.toml
crates/omniscient-llm/src/: api.rs  categorizer.rs  lib.rs  provider.rs  router.rs
crates/omniscient-research/: Cargo.toml
crates/omniscient-research/src/: dag_orchestrator.rs  deep_research.rs  evaluator.rs  lib.rs  report.rs  research_agent.rs  rig_agents.rs
crates/omniscient-web/: Cargo.toml
crates/omniscient-web/src/: academic.rs  crawler.rs  extractor.rs  lib.rs  search.rs  traits.rs
docs/: scheme_design.md  system_architecture.md
