[package]
name = "omniscient-core"
version.workspace = true
edition.workspace = true
description = "Core orchestration engine for Omniscient deep research agent"

[dependencies]
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
rig-core = "0.2.1"
