[package]
name = "omniscient-llm"
version.workspace = true
edition.workspace = true
description = "LLM inference layer — local (Candle/BitNet) + API (OpenAI/Anthropic/Ollama)"

[dependencies]
omniscient-core.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
