[package]
name = "omniscient-gui"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

omniscient-core.workspace = true
omniscient-research.workspace = true
omniscient-knowledge.workspace = true

[features]
# This feature is used for production builds or when a bundler is not used to hide the console window on Windows
custom-protocol = ["tauri/custom-protocol"]
